<resources>
    <string name="app_name">NUMAD22Fa_ShashankAgrawal</string>
    <string name="about_me">About me</string>
    <string name="button_clicky_clacky">Clicky Clacky</string>
    <string name="clicky_clacky_button_1">A</string>
    <string name="clicky_clacky_button_2">B</string>
    <string name="clicky_clacky_button_3">C</string>
    <string name="clicky_clacky_button_4">D</string>
    <string name="clicky_clacky_button_5">E</string>
    <string name="clicky_clacky_button_6">F</string>
    <string name="pressed_default">Pressed:</string>
    <string name="pressed_other">Pressed: %1$s</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_to_url_list">Add to List</string>
    <string name="edit_text_name">Name of url</string>
    <string name="edit_text_link">Link of url</string>
    <string name="find_prime_button">Find Primes</string>
    <string name="http">http://</string>
    <string name="start_prime_search_button">Find Primes</string>
    <string name="terminate_search_button">Terminate Search</string>
    <string name="latest_prime_textView">Latest Prime</string>
    <string name="current_number_textView">Current Number</string>
    <string name="pacifier_checkbox_text">Check if main thread is busy</string>
    <string name="location_service">Get Location/Distance</string>
</resources>