<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPrimeActivity">

    <Button
        android:id="@+id/start_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startPrimeSearch"
        android:text="@string/start_prime_search_button"
        app:layout_constraintBottom_toTopOf="@id/pacifier_switch"
        app:layout_constraintEnd_toStartOf="@+id/terminate_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/terminate_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="endPrimeSearch"
        android:text="@string/terminate_search_button"
        app:layout_constraintBottom_toTopOf="@id/pacifier_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latest_prime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_prime_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/current_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pacifier_switch" />

    <TextView
        android:id="@+id/current_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_number_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/latest_prime"
        app:layout_constraintTop_toBottomOf="@id/pacifier_switch" />

    <CheckBox
        android:id="@+id/pacifier_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacifier_checkbox_text"
        app:layout_constraintBottom_toTopOf="@id/latest_prime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_search_button" />
</androidx.constraintlayout.widget.ConstraintLayout>